--- a/style.css
+++ b/style.css
@@ -364,3 +364,17 @@ h6{font-size: 16px;}
         justify-content: center;
     }
 }
+
+@media screen and (max-width: 480px){
+    #preview-shadow{
+        width: auto;
+        padding: auto;
+    }
+    #preview{
+        width: auto;
+        padding: auto;
+    }
+    .greeting-wrap h1{
+        font-size: 36px;
+    }
+}
